--- a/Projects/CPP_Mechanisms/src/CMakeLists.txt
+++ b/Projects/CPP_Mechanisms/src/CMakeLists.txt
@@ -1,7 +1,2 @@
-
-
-add_library(String String.cpp ${PROJECT_SOURCE_DIR}/inc/String.hpp)
-
-target_include_directories(String PUBLIC ${PROJECT_SOURCE_DIR}/inc/)
-
-target_compile_features(String PUBLIC cxx_std_11)
+add_subdirectory(inheritance)
+add_subdirectory(templates)
