--- a/Projects/CPP_Mechanisms/CMakeLists.txt
+++ b/Projects/CPP_Mechanisms/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-project(template_project
+project(cpp_mechanisms
 		VERSION 1.0
 		DESCRIPTION "Program contains some C++ mechanisms"
 		LANGUAGES CXX
@@ -8,3 +8,4 @@ project(template_project
 
 add_subdirectory(src)
 add_subdirectory(apps)
+
