Added: 1. Red-black tree, 2. Sieve of Eratosthenes, 3. Fast Exponentiation, 4. Some minor tweaks here and there

--- a/Projects/CPP_Mechanisms/apps/CMakeLists.txt
+++ b/Projects/CPP_Mechanisms/apps/CMakeLists.txt
@@ -6,6 +6,7 @@ target_link_libraries(app PRIVATE String)
 target_link_libraries(app PRIVATE Block)
 target_link_libraries(app PRIVATE Temp)
 target_link_libraries(app PRIVATE DList)
+target_link_libraries(app PRIVATE BinaryTree)
 
 set(INCLUDES_DIR
         ${INHERITANCE_INCLUDES_DIR}
